# macos-security-tools

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  macos-compromise-detection.sh  macos-security-center.sh  macos-security-hardening.sh  macos-threat-monitor.sh
docs/: INSTALL.md  MIGRATION_GUIDE.md  PHASE2_SUMMARY.md  QUICK_REFERENCE.md
src/: main.rs
